--- a/public/manifest.json
+++ b/public/manifest.json
@@ -26,7 +26,7 @@
   ],
   "screenshots": [
     {
-      "src": "/icon1.png",
+      "src": "./assets/images/icon1.png",
       "sizes": "540x720",
       "type": "image/png",
       "form_factor": "narrow"
